# nnnn

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  test.cpp  train_network.cpp
data/: README.md
include/: README.md  abstract_layer.h  activations.h  basics.h  dense_layer.h  diffrentiable.h  ensemble.h  graph.h  message.h  message_json.h  model.h  model_json.h  network.h  optimizers.h  read_mnist.h  rnn.h  sparsity.h
include/json/: inference_json.h  message_json.h  model_json.h  node_json.h  training_set_json.h  validate_json.h
include/logging/: console.h
models/: assemblies.json  mnist_fc.json  mnist_fc_987.json  mnist_fc_lg.json  mnist_fc_swish.json
old/: backup_sparsity.h_old  sparsity_working.h_old
repo/: sse2neon.h
web_demo/: data.js  index.html
